err/tornado-slacker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slacker'...
Listing './lib/python3.5/site-packages/slacker/adisp'...
Listing './lib/python3.5/site-packages/slacker/django_backend'...
Compiling './lib/python3.5/site-packages/slacker/postpone.py'...
***   File "./lib/python3.5/site-packages/slacker/postpone.py", line 154
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slacker/workers'...
Compiling './lib/python3.5/site-packages/slacker/workers/__init__.py'...
***   File "./lib/python3.5/site-packages/slacker/workers/__init__.py", line 7
    except ImportError, e: # django is not installed
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado_slacker-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
